[package]
name = "vault_share_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# `rlib` in addition to `cdylib` so other contract crates (e.g. the strategy's
# integration tests) can register this token natively; the wasm artifact is
# still produced from the `cdylib` output.
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "25.3.0"
admin-sep = { git = "https://github.com/theahaco/admin-sep", rev = "46ed159ff38ee81f4b61b5ddb8ca4b6bdf972028" }

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
